--- a/profile/profile.html
+++ b/profile/profile.html
@@ -23,7 +23,7 @@
         <!-- Bungkus tombol dengan .profile-actions -->
         <div class="profile-actions">
             <button class="btn-primary" id="logoutBtn">Hapus Akun</button>
-            <button class="btn-secondary" onclick="window.location.href='agnivolt.html'">
+            <button class="btn-secondary" onclick="window.location.href='../agnivolt.html'">
                 ⬅ Kembali ke Dashboard
             </button>
         </div>
