--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Agnivolt - Memuat Aplikasi...</title>
+    <title>Agnivolt</title>
     
     <script defer src="/__/firebase/12.5.0/firebase-app-compat.js"></script>
     <script defer src="/__/firebase/12.5.0/firebase-auth-compat.js"></script>
@@ -17,7 +17,7 @@
         height: 100vh; 
         margin: 0; 
         background: #ECEFF1; 
-        font-family: Roboto, Helvetica, Arial, sans-serif; 
+        font-family: Inter sans-serif; 
       }
       #message { 
         text-align: center; 
